2010-04-21  Andy Buckley  <andy@insectnation.org>

	* Add @brief Doxygen comments to all analyses, projections and
	core classes which were missing them.

2010-04-21  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* remove obsolete reference to InitialQuarks from DELPHI_2002
	* fix normalisation in CDF_2000_S4155203

2010-04-20  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* bin/make-plots: real support for 2-dim histograms plotted as
	colormaps, updated the documentation accordingly.
	* fix misleading help comment in configure.ac

2010-04-08  Andy Buckley  <andy@insectnation.org>

	* bin/root2flat: Adding this little helper script, minimally
	modified from one which Holger Schulz made for internal use in
	ATLAS.

2010-04-05  Andy Buckley  <andy@insectnation.org>

	* Using spiresbib in rivet-mkanalysis: analysis templates made
	with rivet-mkanalysis will now contain a SPIRES-dumped BibTeX key
	and entry if possible!

	* Adding BibKey and BibTeX entries to analysis metadata files, and
	updating doc build to use them rather than the time-consuming
	SPIRES screen-scraping. Added SPIRES BibTeX dumps to all analysis
	metadata using new (uninstalled & unpackaged) doc/get-spires-data
	script hack.

	* Updating metadata files to add Energies, Beams and PtCuts
	entries to all of them.

	* Adding ToDo, NeedsCrossSection, and better treatment of Beams
	and Energies entries in metadata files and in AnalysisInfo and
	Analysis interfaces.

2010-04-03  Andy Buckley  <andy@insectnation.org>

	* Frank Siegert: Update of rivet-mkhtml to conform to improved
	compare-histos.

	* Frank Siegert: LWH output in precision-8 scientific notation, to
	solve a binning precision problem... the first time weve noticed a
	problem!

	* Improved treatment of data/reference datasets and labels in
	compare-histos.

	* Rewrite of rivet-mkanalysis in Python to make way for neat
	additions.

	* Improving SWIG tests, since once again the user's biuld system